fix typo on carousel text

--- a/app/views/welcome/_carousel.html.erb
+++ b/app/views/welcome/_carousel.html.erb
@@ -44,7 +44,7 @@
                 <div class="fadeInTop-animated" data-animation="fadeInTop">
                   <div class="carousel-description col-sm-12">
                     <h1 class="heavy text-white"><span class="carousel-title-bgclear">smalltalkto.me</span></h1><br>
-                    <h3 class="text-white">Would a back-up plan make your life a little better? We are here to help there too. Just schdule a call below and smalltalk will call with an emergency. The perfect out.</h3>
+                    <h3 class="text-white">Would a back-up plan make your life a little better? We are here to help there too. Just schedule a call below and smalltalk will call with an emergency. The perfect out.</h3>
                   </div>
                 </div>
 
