fixed a few typos and such:

--- a/app/views/welcome/_accordion.html.erb
+++ b/app/views/welcome/_accordion.html.erb
@@ -12,12 +12,12 @@
       <!-- Content 1 -->
       <div class="col-sm-4" data-sr="enter left over 1s">
           <h4><span class="ion-chatboxes bordered-icon-sm mr15"></span> Advice.</h4>
-          <p class="no-margin">We've hand curated some of the best converstaion advice from around the web. Just check out your party theme and we will hook you up.</p>
+          <p class="no-margin">We've hand curated some of the best conversation advice from around the web. Just check out your party theme and we will hook you up.</p>
       </div>
       <!-- Content 2 -->
       <div class="col-sm-4 mt20-xs" data-sr="enter top over 1s">
           <h4><span class="ion-lightbulb bordered-icon-sm mr15"></span> Conversation Starters.</h4>
-          <p class="no-margin">Check out some of our curated conversation starters below. They're organinzed by theme so your sure to find some stories which will light up the room</p>
+          <p class="no-margin">Check out some of our curated conversation starters below. They're organinzed by theme so you're sure to find some stories which will light up the room.</p>
       </div>
       <!-- Content 3 -->
       <div class="col-sm-4 mt20-xs" data-sr="enter right over 1s">
