--- a/app/views/welcome/_carousel.html.erb
+++ b/app/views/welcome/_carousel.html.erb
@@ -21,7 +21,7 @@
               <div class="fadeInTop-animated" data-animation="fadeInTop">
                 <div class="carousel-description col-sm-12">
                   <h1 class="heavy text-white"><span class="carousel-title-bgclear">smalltalkto.me</span></h1><br>
-                  <h3 class="text-white">It's a big world out there, but we're here at help. If you're feeling nervous about an upcoming social event, <b>smalltalkto.me</b> is the resource for you. We have have plenty of conversation tips and some great stories for you to share</h3>
+                  <h3 class="text-white">It's a big world out there, but we're here to help. If you're feeling nervous about an upcoming social event, <b>smalltalkto.me</b> is the resource for you. We have have plenty of conversation tips and some great stories for you to share.</h3>
                 </div>
               </div>
 
@@ -44,7 +44,7 @@
                 <div class="fadeInTop-animated" data-animation="fadeInTop">
                   <div class="carousel-description col-sm-12">
                     <h1 class="heavy text-white"><span class="carousel-title-bgclear">smalltalkto.me</span></h1><br>
-                    <h3 class="text-white">Would a back-up plan make your life a little better? We are here to help there too. Just schedule a call below and smalltalk will call with an emergency. The perfect out.</h3>
+                    <h3 class="text-white">Not having a great night? Just schedule a call below and smalltalk will give you a ring with a convenient excuse. The perfect out.</h3>
                   </div>
                 </div>
 
