add modal signup, registration to come

--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -10,14 +10,14 @@
       <!-- Content 1 -->
       <div>
         <div class="text-center">
-         <a style="float: center; width: 15%; margin-bottom: 20px" class="btn btn-lg btn-info" data-toggle="modal" data-target="#login">Abort!</a>
+         <a style="float: center; width: 15%; margin-bottom: 20px" class="btn btn-lg btn-info" data-toggle="modal" data-target="#abort">Abort!</a>
       </div>
     </div>
   </div><!-- /container -->
 </div><!-- /cta -->
 
 
-<div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
+<div class="modal fade" id="abort" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
