--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
             <li><%= link_to "Your page", user_path(current_user) %></li>
           <% else -%>
             <li><a href="/auth/facebook">Log In With Facebook</a></li>
-            <li><a href="/login">Log In</a></li>
+            <li><a data-toggle="modal" data-target="#login">Log In</a></li>
             <li><a href="/signup">Sign Up</a></li>
           <% end -%>
           <li>
@@ -35,7 +35,8 @@
 <!-- End Top Bar -->
 
 <!-- Login -->
-    <!-- MODAL LOGIN GOES HERE-->
+    <%= render "layouts/modalLogin" %>
+
 <!-- End Login -->
 
 <!-- Begin Navigation -->
