--- a/app/views/layouts/_modalLogin.html.erb
+++ b/app/views/layouts/_modalLogin.html.erb
@@ -6,25 +6,20 @@
                 <h4 class="modal-title" id="loginLabel">Login</h4>
             </div>
             <div class="modal-body">
-              <form role="form">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+              <%= form_for @user, url: 'sessions#create' do |f| %>
+                <div class="form-group email">
+                  <%= f.label :email, 'email: ' %>
+                  <%= f.email_field :email, placeholder: "Email" %>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <div class="form-group password">
+                  <%= f.label :password, 'password: ' %>
+                  <%= f.password_field :password, placeholder: 'password' %>
                 </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Do you flex?
-                    </label>
-                </div>
-            </form><!-- /form -->
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-rw btn-primary">Login</button>
+                <%= f.submit "Log In", class: 'btn btn-rw btn-primary' %>
             </div>
+            <% end %><!-- /form -->
         </div><!-- /modal content -->
     </div><!-- /modal dialog -->
 </div><!-- /modal holder -->
