fixed abort button and removed singles category

--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -10,7 +10,7 @@
       <!-- Content 1 -->
       <div>
         <div class="text-center">
-         <a style="float: center; width: 15%; margin-bottom: 20px" class="btn btn-lg btn-info" data-toggle="modal" data-target="#abort">Abort!</a>
+         <a style="margin-bottom: 15px;" class="btn btn-lg btn-info" data-toggle="modal" data-target="#abort">Abort!</a>
       </div>
     </div>
   </div><!-- /container -->
