--- a/app/views/welcome/_portfolio.html.erb
+++ b/app/views/welcome/_portfolio.html.erb
@@ -16,8 +16,7 @@
       <ul class="nav nav-pills col-xs-12 text-center">
         <li class="filter" data-filter="all">All</li>
         <li class="filter" data-filter="networking">Networking</li>
-        <li class="filter" data-filter="casual">Casual</li>
-        <li class="filter" data-filter="singles">Singles</li>
+        <li class="filter" data-filter="social">Social</li>
       </ul>
     </div>
 
