fixed tag for fadeOut

--- a/app/views/themes/refresh.js.erb
+++ b/app/views/themes/refresh.js.erb
@@ -1,5 +1,5 @@
 $("#refresh").html("<%= j render partial: 'tipsContent', locals: {tips: @tips, content: @content} %>")
 
 $(".primary").click(function(){
-  $("li").fadeOut();
+  $("h3").fadeOut();
 });
