--- a/app/views/themes/refresh.js.erb
+++ b/app/views/themes/refresh.js.erb
@@ -1,5 +1,1 @@
-$("#refresh").html("<%= j render partial: 'tipsContent', locals: {tips: @tips, content: @content} %>")
-
-$(".primary").click(function(){
-  $("li").fadeOut();
-});
+$("#refresh").html("<%= j render partial: 'tipsContent', locals: {tips: @tips, theme: @theme, content: @content} %>")
