--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
           <% else -%>
             <li><a href="/auth/facebook">Log In With Facebook</a></li>
             <li><a data-toggle="modal" data-target="#login">Log In</a></li>
-            <li><a href="/signup">Sign Up</a></li>
+            <li><a data-toggle="modal" data-target="#signup">Sign Up</a></li>
           <% end -%>
           <li>
             <a class="btn btn-social-icon btn-rw btn-primary btn-xs"><i class="fa fa-twitter"></i></a>
@@ -36,6 +36,7 @@
 
 <!-- Login -->
     <%= render "layouts/modalLogin" %>
+    <%= render "layouts/modalSignUp" %>
 
 <!-- End Login -->
 
