--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -8,7 +8,7 @@
 
   <div class="row">
     <div class="text-center primary" style="margin-top:2em;">
-      <h4><%= link_to "Get New Article and Tip", refresh_path(@theme), method: :post, remote: true %></h4>
+      <h4 id="fadingMadness"><%= link_to "Get New Article and Tip", refresh_path(@theme), method: :post, remote: true %></h4>
     </div>
   </div>
 
