added full terms and conditions page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -45,7 +45,11 @@
     <%= f.password_field :password, class: 'form-control', autofocus: true, placeholder: "Please confirm"%><br>
       </div>
   </div>
-      By creating an account, you are agreeing with our <a href="/terms">Terms and Conditions</a>
+
+  <div class="terms">
+    By signing up you are agreeing to our <a href="/terms">Terms and Conditions</a>
+  </div>
+
   <div class="actions">
       <%= f.submit "Sign Up",  class: "btn btn-primary", style: "width: 300px" %>
   </div>
