--- a/app/views/users/delete_tip.js.erb
+++ b/app/views/users/delete_tip.js.erb
@@ -1,4 +1,1 @@
-<% myclass = ".fa-2x.#{@tip.id}" %>
-$('<%= myclass %>').remove()
-<% button_class = ".button.#{@tip.id}"%>
-$('<%= button_class %>').remove()
+$('div#<%= "#{@tip_id}"%>').remove()
