--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,39 +1,39 @@
-<div class="header">
-	<div class="container">
+<div class="container">
+	<div class="header">
 		<div class="row">
 			<!-- Page Title -->
-			<!-- <div class="col-sm-6 col-xs-12"> -->
 				<div class="text-center">
-				<p><h2>Welcome <%="#{current_user.name}"%></p></h2>
-			<!-- </div> -->
+					<p><h2>Welcome <%="#{current_user.name}"%></p></h2>
+				</div>
 			</div>
-
-			<!-- Breadcrumbs -->
-			<div class="col-sm-6">
-				<ol class="breadcrumb">
-
-				</ol>
-			</div><!-- /column -->
 		</div><!-- /row -->
-	</div><!-- /container -->
-</div>
 
-<div class="">
-	<% if current_user.tips.length == 0 %>
-	<h4><div class="text-center">
-		<p>Save some tips to view them here!<p>
-		<%= link_to "View a random tip", '../themes/10' %>
-	</div></h4>
 
-	<% end %>
+		<div class="row mt20 tipsList">
+			<!-- 3 Column Title -->
 
-		<% current_user.tips.each do |tip| %>
 
-			<p><div class="fa-2x <%=tip.id%>"><%= tip.description %></div></p>
-			<div class="button <%=tip.id%>">
-				<%=link_to "Remove tip", delete_tip_path(current_user, tip_id: tip.id), method: :post, remote: true%>
-				<%#= button_to "Remove tip", remote: true, params: {id: tip.id} %>
+			<% current_user.tips.each do |tip| -%>
+
+			<!-- Content interation -->
+			<div class="col-sm-4 text-center" id="<%=tip.id%>">
+				<div class="content-box content-box-bordered">
+					<p><%= tip.description %></p>
+					<div class="button <%=tip.id%>">
+						<%=link_to "Remove tip", delete_tip_path(current_user, tip_id: tip.id), method: :post, remote: true%>
+					</div>
+				</div>
 			</div>
-		<% end %>
+			<% end -%>
 
-</div>
+			<!-- Content Link -->
+			<div class="col-sm-4 text-center">
+				<div class="content-box content-box-bordered">
+					<h4 class="pt15">Save some tips to view them here!</h4>
+					<p class="no-margin"><%= link_to "View a random tip", '../themes/10' %></p>
+				</div>
+			</div>
+
+
+
+		</div><!-- /container -->
