--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,4 +23,5 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-@import "portfolio_helper"
+@import "portfolio_helper";
+@import "terms";
