terms and conditions

--- a/app/assets/stylesheets/terms.css
+++ b/app/assets/stylesheets/terms.css
@@ -1,10 +1,3 @@
-h1 {
-  margin: 10px 70px 0px 70px;
-}
-
-h4 {
-  margin: 5px 100px 0px 60px;
-}
-p {
-  margin: 5px 100px 0px 60px;
+.terms {
+	margin: 5px 5px 0px 10px;
 }
