--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<%= favicon_link_tag('favicon.ico') %>
 	<%= favicon_link_tag 'favicon.ico', rel: 'shortcut icon', type: 'image/x-icon' %>
-
-	<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<%= favicon_link_tag 'favicon-1-144-240544.png', rel: 'apple-touch-icon', type: 'apple-touch-icon', sizes: '144x144' %>
+	<%= favicon_link_tag 'favicon-114-240544.png', rel: 'apple-touch-icon', type: 'apple-touch-icon', sizes: '114x114' %>
+	<%= favicon_link_tag 'favicon-72-240544.png', rel: 'apple-touch-icon', type: 'apple-touch-icon', sizes: '72x72' %>
+	<%= favicon_link_tag 'favicon-57-240544.png', rel: 'apple-touch-icon', type: 'apple-touch-icon' %>
 
 
 </head>
