--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -30,7 +30,7 @@
                 <div class="panel-body">
                     <h3>ABORT!</h3>
                     <p class="help-block">
-                      If it all goes south, schedule a call and we can give you a nice excuse to get out of town.
+                      If it all goes south, schedule a call and we can offer you a graceful exit.
                     </p>
                 </div>
 
@@ -39,12 +39,12 @@
                 </div>
 
                 <div class="form-group">
-                  <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="In how many minutes would you like a call?">
+                  <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="e.g. 90 minutes">
                 </div>
 
 
                 <div class="modal-footer" id="abort-call">
-                  <button type="submit" class="btn center btn-rw btn-primary">Give Me My ABORT Call</button>
+                  <button type="submit" class="btn center btn-rw btn-primary">Schedule My ABORT Call</button>
                 </div>
 
               </form><!-- /form -->
