--- a/app/views/welcome/mission.html.erb
+++ b/app/views/welcome/mission.html.erb
@@ -1,25 +1,55 @@
 <div class="container-fluid">
 
-<h1>Our Mission:</h1>
+  <div class="text-center">
+    <div class="header">
+      <h2>Our Mission:</h2>
+    </div>
+  </div>
 
-<p>Here at Small Talk, we strive to remove the awkwardness from social events, <br>and allow YOU to become the life of the party.</p>
+  <div class="row">
+    <div class="text-center primary" style="margin-top:2em;">
+      <h4>Here at Small Talk, we strive to remove the awkwardness from social events, <br>and allow YOU to become the life of the party.</h4>
+    </div>
+  </div>
 
-<img src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" width="550" height="415" alt="shining">
+  <div class="pt20 mb40" id="">
 
+    <div class="row equality">
+      <div class="col-lg-6 col-md-6 col-sm-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><strong>Us:<strong></h3>
+            <div class="mt15" style="width: 100%;">
+                <div class="panel-body">
+                  <img class="img-responsive" src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" width="550" height="415" alt="shining">
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<h3>Latest Tweets:</h3>
-<div id="container">
-  <a class="twitter-timeline" height="300px" href="https://twitter.com/smallTalkToMe" data-widget-id="694906938132406272">Tweets by @smallTalkToMe</a>
-  <script>
-    !function(d,s,id){
-      var js,fjs = d.getElementsByTagName(s)[0],
-      p=/^http:/.test(d.location)?'http':'https';
-      if(!d.getElementById(id)){js=d.createElement(s);
-        js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
-        fjs.parentNode.insertBefore(js,fjs);
-      }
-    }
-    (document,"script","twitter-wjs");
-  </script>
-</div>
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><strong>Latest Tweets:</strong></h3>
+            <div class="mt15" style="width: 100%;">
+              <a class="twitter-timeline" href="https://twitter.com/smallTalkToMe" data-widget-id="694906938132406272">Tweets by @smallTalkToMe</a>
+              <script>
+                !function(d,s,id){
+                  var js,fjs = d.getElementsByTagName(s)[0],
+                  p=/^http:/.test(d.location)?'http':'https';
+                  if(!d.getElementById(id)){js=d.createElement(s);
+                    js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
+                    fjs.parentNode.insertBefore(js,fjs);
+                  }
+                }
+                (document,"script","twitter-wjs");
+              </script>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
 </div>
