--- a/app/views/welcome/request_form.html.erb
+++ b/app/views/welcome/request_form.html.erb
@@ -1,10 +1,38 @@
 <div class="container-fluid">
 
-<h1>Request a Custom Theme</h1>
+  <div class="text-center">
+    <div class="header">
+      <h2>Request a Custom Theme</h2>
+    </div>
+  </div>
 
-<h2>To request that we cater to your particular party, please fill out the form below</h2>
+  <div class="pt20 mb40" id="">
 
-<img src="https://s-media-cache-ak0.pinimg.com/564x/a2/e6/34/a2e6344cede38ef3a3348e8a7885af7d.jpg" width="375" height="500" alt="pennywise">
+    <div class="row equality">
+      <div class="col-lg-6 col-md-6 col-sm-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><strong>Us:<strong></h3>
+            <div class="mt15" style="width: 100%;">
+                <div class="panel-body">
+                  <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/a2/e6/34/a2e6344cede38ef3a3348e8a7885af7d.jpg" alt="pennywise">
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><strong>Make a Request:</strong></h3>
+            <div class="mt15" style="width: 100%;">
+              <h4>To request that we cater to your particular party, please email us at info@smalltalkto.me</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 
 </div>
