--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -35,13 +35,13 @@
   <!-- Copyright -->
   <div class="row">
     <hr class="dark-hr">
-    <div class="col-sm-6 col-xs-3">
+    <div class="col-sm-8">
       <p class="copyright">© 2016 smalltalkto.me. All rights reserved.</p>
     </div>
-    <div class="col-sm-4 col-xs-2 text-center">
+    <div class="col-sm-3">
       <p class="copyright">Made with ♡ at <%= link_to "The Flatiron School", "http://flatironschool.com" %></p>
     </div>
-    <div class="col-sm-2 col-xs-1 text-right">
+    <div class="col-sm-1">
       <a href="#" class="scroll-top"><div class="footer-scrolltop-holder"><span class="ion-ios7-arrow-up footer-scrolltop"></span></div></a>
     </div>
   </div><!-- /row -->
