--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
             <li><a data-toggle="modal" data-target="#signup">Sign Up</a></li>
           <% end -%>
           <li>
-            <a class="btn btn-social-icon btn-rw btn-primary btn-xs"><i class="fa fa-twitter"></i></a>
+            <a href="https://twitter.com/smallTalkToMe" target="_blank" class="btn btn-social-icon btn-rw btn-primary btn-xs"><i class="fa fa-twitter"></i></a>
           </li>
         </ul>
       </div>
