--- a/app/views/welcome/careers.html.erb
+++ b/app/views/welcome/careers.html.erb
@@ -1,9 +1,38 @@
 <div class="container-fluid">
 
-<h1>Join Us</h1>
+  <div class="text-center">
+    <div class="header">
+      <h2>Join Us</h2>
+    </div>
+  </div>
 
-<h2>Our team at Small Talk is always growing. Why not apply today?</h2>
+  <div class="pt20 mb40" id="">
 
-<img src="https://evanjpalmer.files.wordpress.com/2014/02/you_only_move_twice_46.jpg?w=500&h=375" alt="simpsons">
-  
+    <div class="row equality">
+      <div class="col-lg-6 col-md-6 col-sm-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><strong>The Team:</strong></h3>
+            <div class="mt15" style="width: 100%;">
+                <div class="panel-body">
+                  <img class="img-responsive" src="https://evanjpalmer.files.wordpress.com/2014/02/you_only_move_twice_46.jpg?w=500&h=375" alt="simpsons">
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><strong>Careers:</strong></h3>
+            <div class="mt15" style="width: 100%;">
+              <h4>Our team at Small Talk is always growing. Why not apply today?</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
 </div>
