--- a/app/views/layouts/_modalLogin.html.erb
+++ b/app/views/layouts/_modalLogin.html.erb
@@ -3,10 +3,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="loginLabel">Login</h4>
+                <h5 class="modal-title" id="loginLabel">Login</h5>
             </div>
             <div class="modal-body">
-              <%= form_for @user, url: 'sessions#create' do |f| %>
+              <%= form_for @user, url: 'sessions#create', remote: true do |f| %>
+
                 <div class="form-group email">
                   <%= f.label :email, 'email: ' %>
                   <%= f.email_field :email, placeholder: "Email" %>
