--- a/app/views/layouts/_modalSignUp.html.erb
+++ b/app/views/layouts/_modalSignUp.html.erb
@@ -6,7 +6,7 @@
                 <h4 class="modal-title" id="signupLabel">Sign Up</h4>
             </div>
             <div class="modal-body">
-              <%= form_for @user, url: 'users#create' do |f| %>
+              <%= form_for @user, url: 'users#create', remote: true do |f| %>
               <div class="form-group name">
                 <%= f.label :name, 'Name' %>
                 <%= f.text_field :name, class: 'form-control', autofocus: true, placeholder: "Your Name"%><br>
