--- a/app/views/welcome/mission.html.erb
+++ b/app/views/welcome/mission.html.erb
@@ -18,10 +18,12 @@
       <div class="col-lg-6 col-md-6 col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><strong>Us:<strong></h3>
             <div class="mt15" style="width: 100%;">
                 <div class="panel-body">
-                  <img class="img-responsive" src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" width="550" height="415" alt="shining">
+                  <img class="ig-valencia img-responsive" style="background-color:#000;" src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" width="550" height="415" alt="shining">
+                  <div class="caption center">
+                    <h2 class="center-vertically">Mission</h2>
+                  </div>
                 </div>
             </div>
           </div>
