--- a/app/views/welcome/request_form.html.erb
+++ b/app/views/welcome/request_form.html.erb
@@ -12,10 +12,12 @@
       <div class="col-lg-6 col-md-6 col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><strong>Us:<strong></h3>
             <div class="mt15" style="width: 100%;">
                 <div class="panel-body">
-                  <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/a2/e6/34/a2e6344cede38ef3a3348e8a7885af7d.jpg" alt="pennywise">
+                  <img class="ig-valencia img-responsive" style="background-color:#000;" src="https://s-media-cache-ak0.pinimg.com/564x/a2/e6/34/a2e6344cede38ef3a3348e8a7885af7d.jpg" alt="pennywise">
+                  <div class="caption center">
+                    <h2 class="center-vertically">Reqest A Theme</h2>
+                  </div>
                 </div>
             </div>
           </div>
@@ -25,7 +27,7 @@
       <div class="col-lg-6 col-md-6 col-sm-6">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><strong>Make a Request:</strong></h3>
+            <h3 class="panel-title"><strong>Make a Request</strong></h3>
             <div class="mt15" style="width: 100%;">
               <h4>To request that we cater to your particular party, please email us at info@smalltalkto.me</h4>
               </div>
