--- a/app/views/welcome/careers.html.erb
+++ b/app/views/welcome/careers.html.erb
@@ -12,10 +12,12 @@
       <div class="col-lg-6 col-md-6 col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><strong>The Team:</strong></h3>
             <div class="mt15" style="width: 100%;">
                 <div class="panel-body">
-                  <img class="img-responsive" src="https://evanjpalmer.files.wordpress.com/2014/02/you_only_move_twice_46.jpg?w=500&h=375" alt="simpsons">
+                  <img class="ig-valencia img-responsive" style="background-color:#000;" src="https://evanjpalmer.files.wordpress.com/2014/02/you_only_move_twice_46.jpg?w=500&h=375" alt="simpsons">
+                  <div class="caption center">
+                    <h2 class="center-vertically">Our Team</h2>
+                  </div>
                 </div>
             </div>
           </div>
