adds error messages to signup modal

--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,1 +1,4 @@
-$(".modal-title").html("Please verify information")
+<% @user.errors.full_messages.each do |msg| %>
+var error = "<%= msg %>"
+<% end %>
+$(".modal-title").html(error)
