email links on terms and request form

--- a/app/views/welcome/request_form.html.erb
+++ b/app/views/welcome/request_form.html.erb
@@ -29,7 +29,7 @@
           <div class="panel-heading">
             <h3 class="panel-title"><strong>Make a Request</strong></h3>
             <div class="mt15" style="width: 100%;">
-              <h4>To request that we cater to your particular party, please email us at info@smalltalkto.me</h4>
+              <h4>To request that we cater to your particular party, please email us at <a href="mailto:info@smalltalkto.me">info@smalltalkto.me</a></h4>
               </div>
             </div>
           </div>
