wording for abort modal

--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -28,9 +28,8 @@
               <form id="contactform" role="form" action="#" method="POST">
 
                 <div class="panel-body">
-                    <h3>ABORT!</h3>
                     <p class="help-block">
-                      If it all goes south, schedule a call and we can offer you a graceful exit.
+                      Sometimes all you need is a back-up plan. Schedule a call and we can offer you a graceful exit. Just in case.
                     </p>
                 </div>
 
