--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,4 +1,4 @@
 <% @user.errors.full_messages.each do |msg| %>
 var error = "<%= msg %>"
 <% end %>
-$(".modal-title").html(error)
+$("#signupLabel").html(error)
