--- a/app/views/themes/_tipsContent.html.erb
+++ b/app/views/themes/_tipsContent.html.erb
@@ -20,23 +20,15 @@
     <div class="col-lg-6 col-md-6 col-sm-6">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title"><strong>Conversation Starter:</strong></h3>
+          <h3 class="panel-title"><strong>Conversation Starters:</strong></h3>
           <div class="mt15" style="width: 100%;">
-            <% post_title = content.keys.sample %>
-            <% post_url = content[post_title] %>
-            <% formatted_title = post_title.gsub(/TIL/, "") %>
-            <% if formatted_title[0] == 'that' || formatted_title[0] == " "%>
-              <%formatted_title = formatted_title.gsub(/that/, "").gsub(/" "/, "") %>
-            <% elsif formatted_title[0] == 'That' || formatted_title[0] == " " %>
-              <% formatted_title = formatted_title.gsub(/That/, "").gsub(/" "/, "") %>
+
+            <% @articles.each do |title, link| %>
+              <ul>
+                <li><%= link_to title, link, target: "_blank" %></li>
+              </ul>
             <% end %>
 
-            <% if post_url.include?("comments") %>
-              <% reddit_post_id = post_url.split('/')[-2] %>
-            <% end %>
-              <div class="panel panel-default">
-                <div class="panel-body">
-                  <h3><%= link_to formatted_title, post_url, target: "_blank" %><br></h3>
                 </div>
               </div>
             </div>
